# texki2

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  deploy.sh  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  clientes.py  pedidos.py  produtos.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_create_usuario.py  0002_create_cliente.py  0003_create_produto_variacao_faixa.py  0004_create_pedido_item_arte_auditoria.py  0005_arte_quantidade.py
backend/app/models/: __init__.py  arte.py  auditoria.py  cliente.py  faixa_preco.py  item_pedido.py  pedido.py  produto.py  usuario.py  variacao.py
backend/app/schemas/: auth.py  cliente.py  common.py  faixa_preco.py  pedido.py  produto.py  variacao.py
backend/app/services/: artes.py  auditoria.py  clientes.py  faixas.py  pedidos.py  produtos.py  proportion.py  variacoes.py
backend/app/storage/: __init__.py
backend/tests/: conftest.py  test_artes.py  test_auth.py  test_clientes.py  test_dashboard.py  test_faixas_e_preco.py  test_pedido_status.py  test_pedidos.py  test_produtos.py  test_proportion.py  test_storage_miniatura.py  test_thumb_endpoint.py  test_variacoes.py
docs/: PRD-TEXKI2.md  design-doc.md  minispec-RF5.md  roadmap-fatias.md
docs/adr/: 0001-stack.md  0002-armazenamento-de-arquivos.md  0003-pedido-impressao-nn-e-transicoes.md  (+3 more)
frontend/: .dockerignore  Dockerfile  package.json
(+37 files in other folders)
